nouvelle semaine spring + correction de ce qui n'allait pas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.datasource.password=
 
 # configuration JPA (JPA est une extension qui permet de gérer les données)
 spring.jpa.show-sql=true
+# Dans la ligne suivante, on peut mettre la valeur update tant qu'on est en developpement, une fois mis en prod on met la valeur none
 spring.jpa.hibernate.ddl-auto=update
 
 
